# capcut-cli

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build-clips.yml  test.yml
notes/: implementation-research-2026-04-12.md
py/: requirements.txt  setup.py
py/capcut_cli/: __init__.py  __main__.py  cli.py  config.py  models.py  output.py
py/capcut_cli/discover/: tiktok.py  twitter.py
py/capcut_cli/media/: compose.py  downloader.py  ffmpeg.py
scripts/: build-clips-from-urls.sh  build-clips.sh
src/: cli.rs  config.rs  deps.rs  library.rs  main.rs  models.rs  output.rs
src/discover/: mod.rs  tiktok.rs  twitter.rs
src/media/: compose.rs  downloader.rs  ffmpeg.rs  mod.rs
tests/: e2e_url_to_clip.rs
tests/fixtures/tiktok/: creative_center_overview.html  creative_center_song_detail.html  research_response_page_1.json  research_response_page_2.json
